--- a/.github/workflows/Sandbox.yml
+++ b/.github/workflows/Sandbox.yml
@@ -29,7 +29,7 @@ jobs:
       contentTypes: 'AnalyticsRule'
       branch: 'main'
       sourceControlId: '328e2f56-dbd4-4924-85ee-c8d122c80f38'
-      rootDirectory: '${{ github.workspace }}'
+      rootDirectory: '${{ github.workspace }}/BaseRuleSet'
       githubAuthToken: ${{ secrets.GITHUB_TOKEN }}
       smartDeployment: 'true'
     permissions:
